stupid java